--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.results-container{
+/* .results-container{
   width: 700px;
   margin-top: 30px;
 }
@@ -30,7 +30,7 @@
 .table{
   width: 600px;
   align-self: center;
-}
+} */
 
 
 
